--- a/portfolioUpdate/welcome.scss
+++ b/portfolioUpdate/welcome.scss
@@ -1,4 +1,4 @@
-@import url(/reset.css);
+@import url(reset.css);
 @font-face {
   font-family: SpaceAI;
   src: url(./font/SpaceAdventureItalic-JRpPn.woff);
